rsfg/tests/scripts/error/non-literal.sfg
fn main()
	var x = 5
	panic(x, x)

